Initial commit: FundedFutures project setup and homepage implementation

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Dependencies
+/node_modules
+
+# Next.js build output
+/.next
+
+# Environment variables
+.env*
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
