--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-slider": "^1.2.0",
     "@shadcn/ui": "^0.0.4",
-    "@tanstack/react-query": "^5.55.4",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.56.0",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "firebase-admin": "^12.4.0",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
+    "ioredis": "^5.4.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.439.0",
+    "mongodb": "^6.8.1",
     "next": "14.2.9",
+    "next-auth": "^4.24.7",
+    "puppeteer": "^23.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
+    "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.5.2",
     "tsparticles": "^3.5.0",
+    "twitter-api-v2": "^1.17.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
